deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ratsnest
  labels:
    app.kubernetes.io/part-of: ratsnestpro
    pod-security.kubernetes.io/enforce: restricted
